--- a/kayak-app/src/App.css
+++ b/kayak-app/src/App.css
@@ -1,3 +1,11 @@
+:root {
+  --blue: hsl(178, 61%, 41%);
+  --yellow: hsl(36, 92%, 75%);
+  --darkYellow: hsl(36, 92%, 70%);
+  --lightBlue: hsl(178, 61%, 55%);
+}
+
+
 .App {
   text-align: center;
 }
