--- a/kayak-app/src/components/navBar/NavBar.css
+++ b/kayak-app/src/components/navBar/NavBar.css
@@ -15,8 +15,9 @@
     border-bottom-right-radius: 7px;
     border-bottom-left-radius: 7px;
     box-shadow: 0px 1px 5px black;
+
     font-family: 'Roboto', sans-serif;
-    /* font-size: 15pt; */
+    font-size: 13pt;
 
     background-color: var(--blue);
     color: white;
@@ -70,22 +71,18 @@
 }
 
 .navBar-root .user-stuff {
+
     z-index: 3;
 }
 
 .navBar-root .burger-icon {
-    
     z-index: 3;
 }
 
 .navBar-root .searchBar {
     z-index: 3;
     margin-left: .25em;
-
 }
-
-
-
 
 .login-signup {
     margin: auto;
@@ -107,7 +104,6 @@
 .shoes-hoverable-container,
 .user-hoverable-container {
     position: relative;
-
 }
 
 .kayaks-hoverable-container .hidden-menu-kayaks,
@@ -119,7 +115,8 @@
 
     color: var(--yellow);
     background-color: var(--blue);
-    box-shadow: .5px .5px 2px black;
+    box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
+
 
 }
 
@@ -132,9 +129,7 @@
 
     color: var(--yellow);
     background-color: var(--blue);
-    box-shadow: .5px .5px 2px black;
-
-
+    box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
 }
 
 .kayaks-hoverable-container:hover>.hidden-menu-kayaks,
