--- a/kayak-app/src/components/navBar/Search.css
+++ b/kayak-app/src/components/navBar/Search.css
@@ -28,6 +28,14 @@
     font-weight: bold;
 }
 
+.search-container-root .search-form-root input:-webkit-autofill:hover, 
+.search-container-root .search-form-root input:-webkit-autofill,
+.search-container-root .search-form-root input:-webkit-autofill:focus, 
+.search-container-root .search-form-root input:-webkit-autofill:active{
+    box-shadow: 0 0 0 40px  white inset !important;
+    transition: none;
+}
+
 
 .search-container-root .search-form-root button {
     cursor: pointer;
@@ -35,7 +43,7 @@
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
 
-    height: 1.6em;
+    height: 1.62em;
    
 
     width: 2em;
