--- a/kayak-app/src/index.css
+++ b/kayak-app/src/index.css
@@ -1,3 +1,11 @@
+
+:root {
+  --blue: hsl(178, 61%, 41%);
+  --yellow: hsl(36, 92%, 75%);
+  --darkYellow: hsl(36, 92%, 70%);
+  --lightBlue: hsl(178, 61%, 45%);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
