--- a/kayak-app/src/components/navBar/BurgerMenu.css
+++ b/kayak-app/src/components/navBar/BurgerMenu.css
@@ -1,6 +1,6 @@
 .burger-menu-container {
     position: fixed;
-    padding-top: 4.5em;
+    padding-top: 3em;
     inset: 0;
     display: flex;
     flex-direction: column;
@@ -9,19 +9,23 @@
 
     background-color: var(--blue);
 
-    animation: slide-down-top .5s;
+    /* animation: slide-down-top .5s; */
    
 }
 
 .burger-menu-container a,
 .burger-menu-container .hoverable-container {
-    /* padding: 1em; */
+    padding-top: 1.5em;
     font-size: 25pt;
     height: 100%;
     color: var(--yellow);
     text-decoration: none;
 
     border-bottom: solid var(--yellow) 1px;
+}
+
+.burger-menu-container a {
+
 }
 
 .burger-menu-container>a:hover {
