--- a/kayak-app/src/components/orders/OrderSuccess.css
+++ b/kayak-app/src/components/orders/OrderSuccess.css
@@ -70,7 +70,6 @@
     margin-top: 2em;
 }
 
-
 .order-page-content .order-status-root .order-header {
     display: flex;
     justify-content: space-between;
@@ -83,8 +82,8 @@
 
 .order-page-content .order-status-root .order-header .grand-total {
     display: flex;
-    align-items: center;
-    text-align: start;
+    flex-direction: column;
+    text-align: right;
 }
 
 .order-page-content .order-status-root .order-header .grand-total h2{
