--- a/kayak-app/src/components/products/ProductDetails.css
+++ b/kayak-app/src/components/products/ProductDetails.css
@@ -1,33 +1,55 @@
-.product-details-root{
-   
+.product-details-root {
     text-align: center;
     background-color: var(--blue);
-    margin-top: 9em;
-    padding: 3em;
+    margin-top: 2em;
+    padding: 1em;
     background-color: var(--blue);
+    border-radius: 10px;
 }
 
 .product-details-root .product-container {
     display: flex;
     justify-content: space-between;
     background-color: white;
+    padding: 1em;
+    border-radius: 10px;
     padding: 2em;
+    /* box-shadow: 0 10px 20px rgb(0 0 0 / 10%); */
+
 }
 
-.product-details-root .product-container .product-price-container {
+.product-details-root .product-container img {
+    margin-top: 5em;
+    margin-right: 1em;
+    width: min-content;
+}
+
+.product-details-root .product-price-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-radius: 10px;
+    /* border: solid var(--yellow) 2px; */
+    margin-left: 1em;
+    padding: 1em;
 
-  box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
+
+    color: white;
+    background-color: var(--blue);
+    box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
 }
+
+.product-details-root .product-price-container button {
+    color: var(--blue);
+    background-color: var(--yellow);
+}
+
 
 .product-details-root .product-details-container .shipping-disclosure {
-text-align: left;
+    text-align: left;
+    padding-left: 3em;
+    padding-top: 1em;
 
-border-top: solid var(--blue) 1px;
-border-bottom: solid var(--blue) 1px;
+    border-top: solid var(--blue) 1px;
+    border-bottom: solid var(--blue) 1px;
 }
-
-
-
