--- a/kayak-app/src/components/shoppingCart/ShoppingCart.css
+++ b/kayak-app/src/components/shoppingCart/ShoppingCart.css
@@ -1,13 +1,12 @@
 .shopping-cart-root {
-    background-color: var(--yellow);
-
+    /* background-color: var(--yellow); */
 }
 
 .shopping-cart-root .cart-header {
     text-align: center;
     margin-top: 0;
     padding-top: 2em;
-    color: white;
+    color: black;
     font-size: xx-large;
 }
 
@@ -19,19 +18,19 @@
     width: 98vw;
     margin: auto;
 
+    background-color: var(--blue);
 }
 
 .shopping-cart-root .cart-summary-container {
-
     display: flex;
     flex-direction: column;
     gap: 1.5em;
     border: solid var(--blue) .2px;
     border-radius: 4px;
     text-align: left;
-    width: 35%;
     height: fit-content;
     padding: 1em;
+    margin: 1em;
     text-align: center;
     background-color: white;
 
@@ -39,8 +38,8 @@
 
 /* checkout button style */
 .shopping-cart-root .cart-summary-container .checkout-btn {
-    background-color: var(--blue);
-    color: var(--yellow);
+    background-color: var(--yellow);
+    color: black;
     font-size: 1em;
     font-weight: bold;
     width: 10em;
@@ -54,36 +53,46 @@
 .shopping-cart-root .cart-summary-container .checkout-btn:active {
     background-color: var(--yellow);
     color: var(--blue);
-
 }
 
 .shopping-cart-root .item-row-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    width: 30em;
+    margin: 1em;
     padding: 1em;
     background-color: white;
 }
 
+.shopping-cart-root .item-row-container .cart-item-image-frame {
+    display: flex;
+    width: 5em;
+    height: 5em;
+}
 
+.shopping-cart-root .item-row-container img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+}
 
 /* quanitity buttons style */
-.shopping-cart-root .item-row-container button {
+.shopping-cart-root .item-row-container .quantity-btn button {
     width: 2em;
     height: 2em;
     margin-right: .5em;
     border-radius: 5px;
     border: none;
-    background-color: var(--blue);
-    color: var(--yellow);
+    background-color: var(--yellow);
+    color: black;
     font-weight: bold;
-    font-size: medium;
+    /* font-size: 12pt; */
 }
 
 /* quantity buttons active */
-.shopping-cart-root .item-row-container button:active {
+.shopping-cart-root .item-row-container .quantity-btn button:active {
     background-color: var(--yellow);
     color: var(--blue);
 
@@ -104,8 +113,22 @@
     width: 5em;
 }
 
+.shopping-cart-root .item-row-container .right-side {
+    text-align: right;
+    gap: 1em;
+}
+
+.shopping-cart-root .item-row-container .right-side button {
+    border: none;
+    border-radius: 5px;
+    padding: .25em;
+    width: fit-content;
+    color: black;
+    background-color: var(--yellow);
+}
+
 .shopping-cart-root .shopping-cart-items {
-  max-height: 70vh;
+    max-height: 70vh;
     overflow-y: auto;
 }
 
@@ -121,25 +144,40 @@
 
 .shopping-cart-root .cart-summary-container .summary-header {
     border-bottom: solid var(--blue) 1px;
-    font-size: large;
     margin-top: .5em;
     padding-bottom: 1em;
     margin-bottom: 0;
 }
 
-.shopping-cart-root .empty-cart {
+.shopping-cart-root .empty-cart-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1em;
     text-align: center;
     font-size: x-large;
-    font-weight: bold;
 
     margin: auto;
-    line-height: 5em;
+    padding: 1em;
     width: 90%;
-    height: 5em;
+    height: fit-content;
     border-radius: 8px;
 
     background-color: var(--blue);
     color: var(--yellow);
+}
+
+.shopping-cart-root .empty-cart-container .empty-cart-header {
+    font-weight: bold;
+}
+
+.shopping-cart-root .empty-cart-container .empty-cart-call-to-action a {
+    color: var(--yellow);
+    font-weight: bold;
+}
+
+.shopping-cart-root .empty-cart-container .empty-cart-call-to-action a:hover {
+    color: white;
 }
 
 .item-row-container .quantity-btn {
@@ -147,6 +185,7 @@
     align-items: center;
     text-align: center;
 }
+
 .item-row-container .item-quantity {
     margin-right: .35em;
 }
