--- a/kayak-app/src/index.css
+++ b/kayak-app/src/index.css
@@ -1,13 +1,13 @@
-
-:root {
-  --blue: hsl(178, 61%, 41%);
-  --yellow: hsl(36, 92%, 75%);
-  --darkYellow: hsl(36, 92%, 70%);
-  --lightBlue: hsl(178, 61%, 45%);
+html,
+body {
+  background-color: white;
 }
 
+
 body {
+
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
