--- a/kayak-app/src/components/homePage/HomePage.css
+++ b/kayak-app/src/components/homePage/HomePage.css
@@ -3,19 +3,19 @@ html, body {
     margin: 0;
 }
 
-
 .homepage-root {
+    background-color: var(--blue);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     margin: 0;
     padding: 0;
-    height: 100%;
+    min-height: 45em;
 }
 
 .homepage-root .header-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 
     color: white;
     background-color: var(--blue);
@@ -36,7 +36,6 @@ html, body {
 
 .homepage-root .carousel-container {
     background-color: var(--yellow);
-    margin-top: -.29em;
     margin-bottom: -.29em;
 }
 
@@ -45,9 +44,8 @@ html, body {
     width: fit-content;
     margin: auto;
 
-
     background-color: var(--yellow);
-    color: black;
+    color: var(--blue);
 
     border: solid var(--blue) 2px;
     border-radius: 10px;
