--- a/kayak-app/src/components/navBar/NavBar.css
+++ b/kayak-app/src/components/navBar/NavBar.css
@@ -1,11 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-.navBar-root ul {
-    /* list-style: none;
-    margin: 0;
-    padding: 0; */
-}
-
 nav {
     width: 100%;
 }
@@ -13,9 +7,10 @@ nav {
 .navBar-root {
     position: sticky;
     top: 0px;
-    z-index: 10;
     margin: 0;
-    height: 3.3em;
+    height: 4em;
+    
+    z-index: 10;
 
     box-shadow: 0px 1px 5px black;
 
@@ -29,14 +24,42 @@ nav {
     flex-wrap: nowrap;
     justify-content: space-between;
 
-    /* width: 100%; */
-
     min-width: fit-content;
 
     user-select: none;
 }
 
+
+.navBar-root .logo-container {
+    height: 3.8em;
+    width: 5em;
+    margin-left: 1em;
+}
+
+.navBar-root .logo-container a {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+
+    z-index: 5;
+}
+
+.navBar-root .logo-container a:hover {
+    background-color: var(--blue);
+}
+
+
+.navBar-root .logo-container .logo-image {
+    width: auto;
+    height: 100%;
+    background-color: none;
+}
+
 .navBar-root .burger-icon {
+    width: 3.5em;
+}
+
+.navBar-root .burger {
     width: 3.5em;
 }
 
@@ -49,11 +72,14 @@ nav {
 .navBar-root a,
 .navBar-root span {
     display: inline-block;
-    z-index: 3;
     cursor: pointer;
 
+    font-size: 1.25em;
     padding: 1em;
+    
+    z-index: 3;
 }
+
 
 .navBar-root a:hover,
 .navBar-root span:hover {
@@ -63,10 +89,20 @@ nav {
 
 .navBar-root>div {
     display: flex;
+}
+
+.navBar-root .product-links {
+    display: flex;
     justify-content: space-between;
 }
 
-.navBar-root .user-stuff {
+.navBar-root .product-links>* {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.navBar-root .user-stuff>* {
     z-index: 3;
 }
 
@@ -126,7 +162,6 @@ nav {
 
 .user-hoverable-container {
     position: relative;
-    border-radius: 5px;
 }
 
 .hoverable-container {
@@ -138,7 +173,7 @@ nav {
 .hoverable-container .hidden-menu {
     display: none;
     position: absolute;
-    /* top: 3.76em; */
+    top: 3.999em;
 
     width: 100%;
 
@@ -147,9 +182,15 @@ nav {
     box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
 }
 
+.hoverable-container:hover {
+    background-color: var(--yellow);
+    color: var(--blue);
+}
+
 .user-hoverable-container .hidden-menu-user {
     display: none;
     position: absolute;
+    top: 4.0009em;
     right: .00001em;
 
     width: fit-content;
@@ -162,53 +203,21 @@ nav {
 .hoverable-container:hover>.hidden-menu,
 .user-hoverable-container:hover>.hidden-menu-user {
     display: block;
-    border-radius: 10px;
-    /* width: fit-content; */
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .hoverable-container .hidden-menu .option-one:hover,
 .hoverable-container .hidden-menu .option-two:hover,
 .user-hoverable-container .hidden-menu-user .option-one:hover,
 .user-hoverable-container .hidden-menu-user .option-two:hover {
-
     color: var(--blue);
     background-color: var(--yellow);
-    border-radius: 10px;
     overflow: hidden;
 }
 
-
-
-/* @media screen and (min-width: 1200px) {
-    nav.invisible {
-        display: none;
-    }
-} */
-
-/* @media screen and (max-width: 700px) {
-
-    nav {
-        margin: 0;
-        position: fixed;
-        left: 0;
-        top: 0;
-
-        border-bottom-right-radius: 10px;
-        border-top-right-radius: 10px;
-        border-bottom-left-radius: 0;
-
-    }
-
-    nav,
-    nav>div {
-        flex-direction: column;
-
-
-    }
-
-    nav.hidden>div *:not(span) {
-        display: none;
-    }
-
-
-} */
+.hoverable-container .hidden-menu .option-two:hover,
+.user-hoverable-container .hidden-menu-user .option-two:hover {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
