--- a/kayak-app/src/components/orders/PastOrders.css
+++ b/kayak-app/src/components/orders/PastOrders.css
@@ -1,23 +1,32 @@
 .past-orders-root {
-    padding-top: 1em;
     margin-top: -1em;
+    padding-top: 1em;
     border-radius: 10px;
+}
+
+
+.past-orders-root .order-history-container {
     background-color: white;
 
+    min-height: 50vh;
+    padding: 1em;
+    border-radius: 10px;
 }
 
 .past-orders-root th {
     text-decoration: underline;
+
     color: var(--yellow);
     background-color: var(--blue);
    
     padding: 1em;
     font-size: 12pt;
-
 }
 
 .past-orders-root a {
     color: black;
+
+    text-align: left;
 }
 
 .past-orders-root a:hover {
@@ -26,15 +35,17 @@
 
 .past-orders-root table {
     table-layout: auto;
-    max-width: 1000px;
+
     margin: auto;
+    max-width: 1000px;
+
     border-collapse: collapse;
 }
 
 .past-orders-root td {
     padding: 1em;
-    border-bottom: solid var(--blue) 1px;
 
+    border-bottom: solid var(--blue) 1px;
 }
 
 .past-orders-root td:not(td:first-child) {
@@ -47,5 +58,4 @@
 
 .past-orders-root tr:nth-child(odd) {
     background-color: var(white);
-
 }
