--- a/kayak-app/src/components/products/ProductCard.css
+++ b/kayak-app/src/components/products/ProductCard.css
@@ -9,11 +9,13 @@
   flex: 1 1 200px;
 
   text-align: center;
+
+  transition: all .2s ease-in-out;
 }
 
 .product-card:hover {
-  
-  box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
+  transform: scale(1.009);
+  box-shadow: 0 5px 5px rgb(0 0 0 / 10%);
 }
 
 .product-card h4 {
@@ -22,6 +24,7 @@
 
 .product-card a {
   text-decoration: none;
+
   color: black;
 }
 
@@ -32,7 +35,6 @@
   padding: 10px;
   overflow: auto;
   display: block;
-  
 
   height: fit-content;
   width: fit-content;
@@ -40,54 +42,61 @@
   text-align: center;
 
 }
+
 .product-info .image-frame {
   display: flex;
   justify-content: center;
   text-align: center;
+
+  margin: auto;
   height: 11em;
   width: 8em;
-  margin: auto;
 }
 
 .image {
-
-  max-width: 100%;
+  display: block;
+  overflow: hidden;
+  
+  margin: auto;
   height: auto;
   width: fit-content;
-  overflow: hidden;
-  display: block;
-  margin: auto;
+  max-width: 100%;
 
 }
 
 .product-name {
   font-weight: bold;
   font-size: large;
+
   color: black;
 }
 
 .add-button {
   display: inline-block;
-  border: solid white 1px;
-  border-radius: 4px;
-  z-index: 1;
-  
+
   color: black;
   background-color: var(--yellow);
+  border: solid white 1px;
+  border-radius: 4px;
+
+  
   text-align: center;
   font-weight: bold;
   font-size: 20px;
+  
+  cursor: pointer;
+
+  margin: 5px;
   padding: 0.5rem 1rem;
 
-  cursor: pointer;
-  margin: 5px;
+  z-index: 1;
 }
 
 .add-button span {
-  cursor: pointer;
-  display: inline-block;
   position: relative;
+  display: inline-block;
 
+  cursor: pointer;
 }
 
 .add-button span:after {
@@ -97,8 +106,7 @@
 }
 
 .add-button:hover {
-  background-color: var(--blue);
   color: var(--yellow);
+  background-color: var(--blue);
   border: solid var(--yellow) 1px;
-  
 }
