--- a/kayak-app/src/components/orders/OrderSuccess.css
+++ b/kayak-app/src/components/orders/OrderSuccess.css
@@ -1,11 +1,12 @@
 .order-root {
     background-color: var(--blue);
 
-    height: 40em;
+    
+    min-height: max-content;
     padding: 2em;
 
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    /* border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px; */
 }
 
 
@@ -32,30 +33,22 @@
     justify-content: space-between;
     align-items: center;
 
+
     width: 100%;
-    margin-top: 1em;
-    padding: 1em;
+    margin-bottom: 0;
+    padding: 0 1em;
 }
 
 .order-detail-root .order-display .order-data-root {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-
-.order-detail-root .order-data-root {
-    text-align: left;
-}
-
-.order-detail-root .order-display .order-display-quantity {
     display: flex;
     flex-direction: column;
     flex-grow: 2;
 }
 
-.order-detail-root .order-display .order-data-root {
-    width: 15em;
+.order-detail-root .order-display .order-display-quantity {
+    display: flex;
+    flex-direction: column;
+   
 }
 
 .order-detail-root .bold {
@@ -65,17 +58,21 @@
 .order-root .product-image-frame {
     display: flex;
     justify-content: center;
-
+    text-align: center;
+  
     margin: auto;
     height: 11em;
-    width: 9em;
+    width: 8em;
 }
 
 .order-root .product-image-frame img {
-    height: auto;
-    width: 100%;
-    
     display: block;
+    overflow: hidden;
+    
+    margin: auto;
+    height: auto;
+    width: fit-content;
+    max-width: 100%;
 }
 
 .order-root .order-status-success {
